# dont-stop-running-retired

./: .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  INSTALL  README.md
.old/engine/: CMakeLists.txt
.old/engine/include/: Bone2D.h  BoneArmature2D.h  CompileFlags.h  Console.h  Constants.h  Engine.h  Entity.h  FPSCounter.h  InputSystem.h  Log.h  MathUtils.h  Memory.h  Physics.h  Renderable.h  Sprite.h  SpriteSheetLoader.h  StateInput.h  TextureLoader.h  Transform.h  Version.h
.old/engine/include/rapidjson/: reader.h
.old/engine/include/sdl/: SDLInputSystem.h  SDLRenderer.h  SDLTexture.h  SDLUtils.h
.old/engine/src/: Engine.cpp  Identity.cpp  Sound.cpp  StateInput.cpp
.old/engine/src/sdl/: SDLTexture.cpp
.old/engine/src/win/: Filesystem.cpp  Timer.cpp
.old/game/: BackgroundRenderer.cpp  BackgroundRenderer.h  CMakeLists.txt  ConsoleHandler.cpp  ConsoleHandler.h  Main.cpp  Runner.cpp  World.cpp  World.h
.old/test/: CMakeLists.txt  Test.cpp  TestBones.h  TestIdentities.h  TestSpriteSheetLoader.h
asset-viewer/: AssetViewer.cpp  CMakeLists.txt
cmake/: FindBGFX.cmake  FindBox2D.cmake  FindGLM.cmake  FindNanovg.cmake  FindRapidJSON.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
doc/: bgfx_shaders.md  bgfx_textures.md
engine/: CMakeLists.txt
engine/include/: Bone2D.h  Engine.h  Entity.h  Event.h  FPSCounter.h  Filesystem.h  FrameCounter.h  Game.h  Identity.h  Input.h  InputSystem.h  Log.h  MathUtils.h  Random.h  Rect2.h  Renderer.h  Sound.h  SpriteSheet.h  StateInput.h  Texture.h  TextureFactory.h  TileEngine.h  TileMap.h  Timer.h  Updateable.h  Vec2.h
engine/include/graphics/: Renderer.h
engine/include/physics/: CollisionSystem.h  GravityForceGenerator.h  Particle.h  ParticleForceGenerator.h  ParticleGeneratorRegistry.h  Physics.h
engine/include/sdl/: SDLInput.h  SDLInputSystem.h  SDLRenderer.h  SDLTexture.h  SDLTextureFactory.h  SDLTextureLoader.h  SDLUtils.h
engine/src/: Bone2D.cpp  BoneArmature2D.cpp  Engine.cpp  Filesystem.cpp  Game.cpp  Identity.cpp  InputSystem.cpp  MathUtils.cpp  Physics.cpp  Renderer.cpp  Sound.cpp  SpriteSheetLoader.cpp  StateInput.cpp  TextureFactory.cpp  TileMap.cpp  Timer.cpp  Version.cpp
engine/src/graphics/: Renderer.cpp
engine/src/physics/: Particle.cpp  Physics.cpp
engine/src/sdl/: SDLInput.cpp  SDLInputSystem.cpp  SDLRenderer.cpp  SDLTexture.cpp  SDLTextureFactory.cpp  SDLTextureLoader.cpp  SDLUtils.cpp
game/: BackgroundRenderer.cpp  BackgroundRenderer.h  CMakeLists.txt  ConsoleHandler.h  Main.cpp  Runner.cpp  Runner.h  RunnerTrail.cpp  RunnerTrail.h  Stats.h  World.cpp  World.h  defines.h  main.cpp  runner.h  test_physics.cpp  world.h
sandbox/: CMakeLists.txt  asset_loader.h  bgfx_utils.cpp  bgfx_utils.h  bx2_math.h  game_object.h  main.cpp  particles.cpp  particles.h  random.h  settings.h  sprite.h  utils.cpp  utils.h
sandbox/engine/: asset_loader.cpp  asset_loader.h  bgfx_utils.cpp  bgfx_utils.h  math.h  particles.cpp  particles.h  renderer.cpp  renderer.h  shader.h  sprite.h  texture.h  types.h
src/: CMakeLists.txt  main.cpp
src/engine/: asset_loader.cpp  asset_loader.h  assets.cpp  assets.h  bgfx_utils.cpp  bgfx_utils.h  filesystem.cpp  filesystem.h  game_object.h  json.h  json_reader.h  level_map.h  log.h  particles.cpp  particles.h  renderer.cpp  renderer.h  sprite.h  types.h
src/engine/game_objects/: particle_system.h  shape.h  static_tile.cpp  static_tile.h
src/engine/input/: input.cpp  input.h
src/engine/ui/: gui.cpp  gui.h
src/engine/ui/imgui/: imgui.cpp  imgui.h
src/engine/ui/nanovg/: nanovg_bgfx.cpp
src/map_editor/: context.h  editor.cpp  editor.h  editor_ui.h  export.cpp  export.h  map_editor.cpp  map_editor.h
src/particle_editor/: particle_editor.h
test/: CMakeLists.txt  Test.cpp  TestBones.h  TestIdentities.h  TestMath.h  TestingFramework.h
tests/: CMakeLists.txt  test_physics.h  tests.cpp
tests/fructose/: fructose.h  test_root.h
tools/: build.py  build_assets.py  build_dependencies.sh  clean_png.sh  loc.sh
